[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Andrew Brownbill <andrew.brownbill@gmail.com>", "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { version = "0.27.2" } # "0.27.0"
eframe = { version= "0.27.2", features = [
    "default",
    "__screenshot",
#    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.27.2", features = ["default", "all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png" ] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# For file loading.
rfd = "0.13"
async-std="1.12"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
#egui = { git = "https://github.com/emilk/egui", branch = "master" }
#eframe = { git = "https://github.com/emilk/egui", branch = "master" }
#egui_extras= { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
