[package]
name = "tshirt_checker"
version = "0.1.1"
authors = ["Andrew Brownbill <andrew.brownbill@gmail.com>", "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.79"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
arr_macro = { version = "0.2.1" }
async-std = "1.12"
eframe = { version = "0.28", features = [
    "default",
    "__screenshot",
#    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = { version = "0.28" }
egui_extras = { version = "0.28", features = ["default", "all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png" ] }
log = "0.4"
nalgebra = "0.32.6"

# For file loading.
rfd = "0.14.1"
web-sys = "=0.3.69"

# For ms timer
web-time = "1.1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Optimize for speed, even in debug builds
[profile.dev]
opt-level = 2 # fast and small wasm
debug = true

[profile.release]
opt-level = 2 # fast and small wasm
lto = true

# Optimize in debug builds
[profile.dev.package."*"]
opt-level = 2
debug = true

# For now leave debug information out in release.
[release.dev.package."*"]
opt-level = 2

[patch.crates-io]

